<resources>
    <string name="app_name">PetShelter</string>

    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="adopt">Adopt</string>
    <string name="volunteer">Volunteer</string>
    <string name="contactUs">Contact Us</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us_text">Shelter that you love We are here to save animal Pet shelter is website that provides services shelters animals. Pet shelter just focus on the animal shelter cats and dogs. We are open enrollment to the volunteers who want to help to take care of the animals in the pet shelter. And if you want to adopt the animals in the pet shelter, you can see the pictures of animals in the page of the our web could then come to the our place or call us in contact person.</string>
    <string name="register">Register</string>
    <string name="about_us_content">Shelter that you love; we are here to save animal. Pet Shelter is web site and application that provides services shelters animals. Pet shelter just focus on cats and dogs. we are open enrollment to the volunteers who want to help the animals, and if you want to adopt the animals you can see in the \'adopt\' page of our web and our application.</string>
    <string name="about_us">About Us</string>
    <string name="content_adopt">You are about to adopt</string>
    <string name="name_pet">Name</string>
    <string name="content_contact">This is the contact information :</string>
    <string name="content_email">Email : AryaDharma5007@gmail.com</string>
    <string name="content_title_email">Email</string>
    <string name="content_phone">Phone : 081283333333</string>
    <string name="content_title_callus">Call Us</string>
    <string name="image_check">Image Check</string>
    <string name="content_title_register_successfull">Register Successfull</string>
    <string name="content_register_success">We will contact you later</string>
    <string name="content_title_home">Back to home</string>
    <string name="content_title_volunteer">Do you want to become a volunteer?</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="email_hint">Email (yourmail@gmail.com)</string>
    <string name="phone">Phone Number</string>
</resources>
